# C-CarRace

./: Bike.cpp  Bike.h  CMakeLists.txt  Car.cpp  Car.h  CityBike.cpp  CityBike.h  NormalCar.cpp  NormalCar.h  OffRoader.cpp  OffRoader.h  README.md  Race.cpp  Race.h  SportCar.cpp  SportCar.h  Vehicle.cpp  Vehicle.h  lab1.cpp  lab2.cpp  main.cpp
